kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-market
  labels:
    app.kubernetes.io/name: nexus-market
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nexus-market
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
